--- a/public/index.html
+++ b/public/index.html
@@ -1,37 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width,initial-scale=1" />
 
-<head>
-	<meta charset='utf-8'>
-	<meta name='viewport' content='width=device-width,initial-scale=1'>
+    <title>Expense Tracker</title>
 
-	<title>Svelte app</title>
+    <!-- <link rel="manifest" href="/manifest.json" /> -->
+    <meta name="description" content="Track your Expenses" />
+    <meta name="theme-color" content="#000000" />
 
-	<link rel="manifest" href="/manifest.json" />
-	<meta name="description" content="Svelte PWA" />
-	<meta name="theme-color" content="#000" />
+    <!-- <meta name="apple-mobile-web-app-capable" content="yes" /> -->
+    <!-- <meta name="apple-mobile-web-app-status-bar-style" content="black" /> -->
+    <!-- <meta name="apple-mobile-web-app-title" content="Svelte PWA" /> -->
+    <!-- <link rel="apple-touch-icon" href="/images/icons/icon-152x152.png" /> -->
 
-	<!-- <meta name="apple-mobile-web-app-capable" content="yes" /> -->
-	<!-- <meta name="apple-mobile-web-app-status-bar-style" content="black" /> -->
-	<!-- <meta name="apple-mobile-web-app-title" content="Svelte PWA" /> -->
-	<link rel="apple-touch-icon" href="/images/icons/icon-152x152.png" />
+    <!-- <link rel='icon' type='image/png' href='/favicon.png'> -->
 
-	<link rel='icon' type='image/png' href='/favicon.png'>
-	<link rel='stylesheet' href='/global.css'>
-	<link rel='stylesheet' href='/build/bundle.css'>
-
-	<script>
+    <!-- <script>
 		if ('serviceWorker' in navigator)
 			navigator.serviceWorker.register('/service-worker.js')
 				// remove lines below in production
 				.then(reg => console.log('service worker registered', reg))
 				.catch(err => console.log('failed to register service worker', err));
-	</script>
+	</script> -->
 
-	<script defer src='/build/bundle.js'></script>
-</head>
+    <!-- <script defer src='/build/bundle.js'></script> -->
+  </head>
 
-<body>
-</body>
-
+  <body>
+    Test your API !
+  </body>
 </html>
